Fix overflow with link in form
The link for updating/resetting the password has the hover underline animation effect, this line stretched to the width of the container and not the width of the text of the link. This has been fixed with this commit.

--- a/ProjectLily/src/static/style.css
+++ b/ProjectLily/src/static/style.css
@@ -157,6 +157,8 @@ a, a:hover{
   display: inline-block;
   position: relative;
   color: var(--clr-neutral-900);
+  max-width: -moz-fit-content;
+  max-width: fit-content;
 }
 
 .hover-underline-animation:after {
